# Alignment-Aware-Neural-Architecture--AANA-

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitleaks.toml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
aana/: __init__.py  adapter_layout.py  canonical_ids.py  cli.py  fastapi_app.py  middleware.py  registry.py  sdk.py  server.py  validate_platform.py
assets/: README.md
docs/: aana-agent-action-technical-report.md  aana-agent-contract-sdk.md  aana-agent-tool-use-diagnostic-evidence-chain.md  aana-aix-audit-customer-onboarding-templates.md  aana-aix-audit-enterprise-ops-pilot-packet.md  aana-apart-research-collaboration-brief.md  aana-benchmark-maintainer-review-protocol.md  aana-generalization-audit.md  aana-harmactions-eval.md  aana-head-to-head-findings.md  aana-mcp-bench-submission-plan.md  aana-mcp-chatgpt-app.md  aana-mechanistic-interoperability-design-brief.md  aana-mlcommons-integration-brief.md  aana-msb-mcp-security-bench.md  aana-pre-action-control-layer-technical-report.md  aana-production-candidate-evidence-pack.md  aana-public-artifact-hub.md  aana-security-threat-model.md  aana-standard-publication.md  aana-vs-sota-llms.md  aana-workflow-contract.md  adapter-gallery.md  adapter-integration-sdk.md  agent-action-contract-quickstart.md  agent-action-contract-v1.md  agent-framework-middleware.md  agent-integration.md  agent-tool-precheck-contract.md  application-demo-report.md  application-playbook.md  architecture-map.md  architecture.md  audit-observability-hardening.md  auditability.md  authorization-state.md  benchmark-reporting-policy.md  civic-family.md  cli-hardening.md  community-issue-intake.md  (+89 more)
eval_outputs/: agent_tool_use_control_upgrade_results.json  privacy_pii_adapter_upgrade_results.json
eval_pipeline/: __init__.py  aana_standard_publication.py  adapter_gallery.py  adapter_gallery_validation.py  adapter_generalization_config.py  adapter_generalization_gate.py  adapter_heldout_validation.py  adapter_validation.py  agent_api.py  agent_contract.py  agent_contract_chaos.py  agent_server.py  agent_tool_use_control.py  aix.py  aix_audit.py  analyze_failures.py  audit.py  authorization_state.py  benchmark_fit_lint.py  benchmark_reporting.py  build_batch_file.py  build_unified_comparison.py  bundle_certification.py  civic_family.py  common.py  compare_constraint_reasoning.py  connectivity_risk.py  constraint_tools.py  contract_freeze.py  correction_execution.py  croissant_evidence.py  cross_domain_adapter_family_validation.py  dataperf_dynabench_audit.py  durable_audit_storage.py  enterprise_connector_readiness.py  enterprise_family.py  enterprise_live_connectors.py  enterprise_support_demo.py  evidence.py  evidence_artifact_policy.py  (+80 more)
evals/: __init__.py
examples/: README.md  aana_bridge.env.example  aana_standard_publication_manifest.json  access_permission_change_adapter.json  adapter_gallery.json  adapter_generalization_config.json  adapter_generalization_manifest.json  adapter_heldout_validation.json  agent_action_contract_cases.json  agent_action_safety_guardrail_adapter.json  agent_api_usage.py  agent_event_contract_fixtures.json  agent_tool_precheck_private_read.json  agent_tool_use_control_validation_cases.json  agent_tool_use_hf_experiment.json  aix_calibration_cases.json  api_contract_change_adapter.json  application_scenarios.jsonl  audit_retention_policy_internal_pilot.json  authorization_robustness_hf_experiment.json  benchmark_fit_lint_manifest.json  benchmark_reporting_manifest.json  booking_purchase_guardrail_adapter.json  calendar_scheduling_adapter.json  casework_response_checker_adapter.json  civic_certification_policy.json  code_change_review_adapter.json  community_issue_candidates.json  crm_support_reply_adapter.json  croissant_metadata_missing_governance.json  croissant_metadata_sample.json  cross_domain_adapter_family_validation.json  customer_success_renewal_adapter.json  data_export_guardrail_adapter.json  data_pipeline_change_adapter.json  database_migration_guardrail_adapter.json  dataperf_dynabench_audit_profile.json  dataperf_dynabench_benchmark_summary.json  deployment_readiness_adapter.json  domain_adapter_template.json  (+144 more)
papers/: README.md
schemas/: agent_tool_precheck.schema.json  interoperability_contract.schema.json  mi_schema_versioning_policy.json
scripts/: README.md  __init__.py  aana_agent_tool_contract_eval.py  aana_calibrate_grounded_gates.py  aana_cli.py  aana_cross_domain_action_gate_eval.py  aana_cross_domain_action_gate_v2_eval.py  aana_cross_domain_action_gate_v3_eval.py  aana_cross_domain_action_gate_v4_eval.py  aana_cross_domain_action_gate_v5_eval.py  aana_cross_domain_action_taxonomy_model_eval.py  aana_external_agent_trace_eval.py  aana_external_agent_trace_noisy_evidence_eval.py  aana_external_validity_hermes_head_to_head.py  aana_fastapi.py  aana_gap_eval.py  aana_harmactions_eval.py  aana_head_to_head_contract_no_recovery_vs_aana.py  aana_head_to_head_llm_judge_vs_aana.py  aana_head_to_head_permissive_vs_aana.py  aana_head_to_head_prompt_policy_vs_aana.py  aana_head_to_head_single_classifier_vs_aana.py  aana_mcp_server.py  aana_piimb_eval.py  aana_piimb_presidio_eval.py  aana_server.py  aana_tau2_action_taxonomy_v2_train.py  aana_tau2_tool_call_v2_extract.py  aana_tau2_v1_v2_compare.py  aana_tool_precheck.py  aana_wikibio_hallucination_eval.py  analyze_privacy_pii_high_risk_categories.py  build_adapter_gallery.py  build_agent_tool_use_diagnostic_evidence_chain.py  build_community_eval_submissions.py  build_family_pages.py  build_peer_review_evidence_pack.py  community_issue_scout.py  community_issue_solver.py  compare_adapter_runner_baseline.py  (+74 more)
tests/: __init__.py  test_aana_cli.py  test_aana_controlled_agents_eval.py  test_aana_external_agent_trace_noisy_evidence_eval.py  test_aana_external_validity_hermes_head_to_head.py  test_aana_harmactions_eval.py  test_aana_head_to_head_contract_no_recovery_vs_aana.py  test_adapter_kit.py  (+212 more)
(+568 files in other folders)
