[project]
name = "aana-eval-pipeline"
version = "0.1.0"
description = "Evaluation pipeline for Alignment-Aware Neural Architecture experiments."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Armando Sori" }
]
keywords = [
  "alignment",
  "ai-safety",
  "llm-evaluation",
  "openai",
  "aana",
  "evaluation-pipeline",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "jsonschema>=4.22",
]

[project.optional-dependencies]
test = [
  "pytest>=8.2",
]
dev = [
  "build>=1.2",
  "check-jsonschema>=0.29",
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.6",
]

[project.urls]
Homepage = "https://github.com/mindbomber/Alignment-Aware-Neural-Architecture--AANA-"
Repository = "https://github.com/mindbomber/Alignment-Aware-Neural-Architecture--AANA-"
Issues = "https://github.com/mindbomber/Alignment-Aware-Neural-Architecture--AANA-/issues"

[project.scripts]
aana = "scripts.aana_cli:main"
aana-server = "eval_pipeline.agent_server:main"
aana-validate-mi-contracts = "scripts.validate_mi_contracts:main"
aana-release-readiness-report = "scripts.release_readiness_report:main"
aana-mi-release-candidate = "scripts.mi_release_candidate:main"
aana-mi-release-bundle = "scripts.mi_release_bundle:main"
aana-mi-verify-release-bundle = "scripts.mi_verify_release_bundle:main"
aana-mi-release = "scripts.mi_release:main"
aana-mi-human-signoff = "scripts.human_signoff:main"
aana-mi-live-connector-plan = "scripts.live_connector_readiness:main"
aana-mi-production-deployment-manifest = "scripts.production_deployment_manifest:main"
aana-mi-post-release-monitoring = "scripts.post_release_monitoring:main"
aana-mi-production-dry-run = "scripts.production_dry_run:main"
aana-mi-production-go-no-go = "scripts.production_go_no_go:main"

[tool.setuptools.packages.find]
include = ["aana*", "eval_pipeline*", "scripts*"]

[tool.unittest]
start-dir = "tests"
