[project]
name = "aana-eval-pipeline"
version = "0.1.0"
description = "AANA runtime, SDK, API, and evaluation pipeline for auditable, grounded, controllable agent actions."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Armando Sori" }
]
keywords = [
  "alignment",
  "ai-safety",
  "llm-evaluation",
  "openai",
  "aana",
  "evaluation-pipeline",
  "agent-action-contract",
  "agent-control",
  "auditability",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "jsonschema>=4.22",
]

[project.optional-dependencies]
test = [
  "pytest>=8.2",
]
dev = [
  "build>=1.2",
  "check-jsonschema>=0.29",
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.6",
]
api = [
  "fastapi>=0.110",
  "uvicorn>=0.29",
]
eval = [
  "joblib>=1.3",
  "scikit-learn>=1.4",
]

[project.urls]
Homepage = "https://github.com/mindbomber/Alignment-Aware-Neural-Architecture--AANA-"
Repository = "https://github.com/mindbomber/Alignment-Aware-Neural-Architecture--AANA-"
Issues = "https://github.com/mindbomber/Alignment-Aware-Neural-Architecture--AANA-/issues"

[project.scripts]
aana = "scripts.aana_cli:main"
aana-server = "eval_pipeline.agent_server:main"
aana-fastapi = "eval_pipeline.fastapi_app:main"
aana-validate-mi-contracts = "scripts.validate_mi_contracts:main"
aana-release-readiness-report = "scripts.release_readiness_report:main"
aana-mi-release-candidate = "scripts.mi_release_candidate:main"
aana-mi-release-bundle = "scripts.mi_release_bundle:main"
aana-mi-verify-release-bundle = "scripts.mi_verify_release_bundle:main"
aana-mi-release = "scripts.mi_release:main"
aana-mi-human-signoff = "scripts.human_signoff:main"
aana-mi-live-connector-plan = "scripts.live_connector_readiness:main"
aana-mi-production-deployment-manifest = "scripts.production_deployment_manifest:main"
aana-mi-post-release-monitoring = "scripts.post_release_monitoring:main"
aana-mi-production-dry-run = "scripts.production_dry_run:main"
aana-mi-production-go-no-go = "scripts.production_go_no_go:main"
aana-validate-hf-dataset-registry = "scripts.validate_hf_dataset_registry:main"
aana-validate-hf-calibration = "scripts.validate_hf_calibration:main"
aana-privacy-pii-adapter-eval = "scripts.run_privacy_pii_adapter_eval:main"
aana-grounded-qa-adapter-eval = "scripts.run_grounded_qa_adapter_eval:main"
aana-agent-tool-use-control-eval = "scripts.run_agent_tool_use_control_eval:main"
aana-validate-cross-domain-adapter-families = "scripts.validate_cross_domain_adapter_families:main"
aana-validate-hf-dataset-proof = "scripts.validate_hf_dataset_proof:main"
aana-validate-production-candidate-evidence-pack = "scripts.validate_production_candidate_evidence_pack:main"
aana-validate-standard-publication = "scripts.validate_aana_standard_publication:main"
aana-validate-adapter-generalization = "scripts.validate_adapter_generalization:main"
aana-validate-security-hardening = "scripts.validate_security_hardening:main"
aana-validate-packaging-hardening = "scripts.validate_packaging_hardening:main"

[tool.setuptools.packages.find]
include = ["aana*", "eval_pipeline*", "scripts*"]

[tool.unittest]
start-dir = "tests"
