[project]
name = "aana-eval-pipeline"
version = "0.1.0"
description = "AANA runtime, SDK, API, and middleware for auditable, grounded, controllable agent actions."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Armando Sori" }
]
keywords = [
  "alignment",
  "ai-safety",
  "openai",
  "aana",
  "agent-action-contract",
  "agent-control",
  "auditability",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "jsonschema>=4.22",
]

[project.optional-dependencies]
test = [
  "datasets>=2.18",
  "joblib>=1.3",
  "pytest>=8.2",
  "scikit-learn>=1.4",
  "zstandard>=0.22",
]
dev = [
  "build>=1.2",
  "check-jsonschema>=0.29",
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.6",
]
api = [
  "fastapi>=0.110",
  "httpx>=0.27",
  "uvicorn>=0.29",
]
eval = [
  "joblib>=1.3",
  "scikit-learn>=1.4",
]

[project.urls]
Homepage = "https://github.com/mindbomber/Alignment-Aware-Neural-Architecture--AANA-"
Repository = "https://github.com/mindbomber/Alignment-Aware-Neural-Architecture--AANA-"
Issues = "https://github.com/mindbomber/Alignment-Aware-Neural-Architecture--AANA-/issues"

[project.scripts]
aana = "aana.cli:main"
aana-fastapi = "aana.fastapi_app:main"
aana-validate-platform = "aana.validate_platform:main"

[tool.setuptools.packages.find]
include = ["aana*", "eval_pipeline*"]
exclude = ["scripts*", "tests*", "evals*"]

[tool.setuptools.package-data]
aana = [
  "adapters/*/manifest.json",
  "bundles/*/manifest.json",
]

[tool.unittest]
start-dir = "tests"

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [
  ".git",
  ".venv",
  "build",
  "dist",
  "eval_outputs",
  "node_modules",
]
pythonpath = [".", "tests", "scripts/evals"]
